fixed nav not showing on mobile

--- a/Less/home-page.less
+++ b/Less/home-page.less
@@ -9,7 +9,7 @@ header{
         
         @media @phone{
             background-image: none;
-            background-color: @floralwhite;
+            background-color: #708090;
             height: 20vh;
         }
     }
@@ -55,7 +55,8 @@ header{
         }
 
         @media @phone{
-            height: 20vh;
+            display: none;
+            height: 0vh;
         }
     }
 }
@@ -68,7 +69,7 @@ header{
 
     @media @phone{
         height: 60vh;
-        margin-top: 60vh;
+        margin-top: 30vh;
     }
 }
 .centertext{
