--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,6 @@ header .navbar nav {
 @media (max-width: 500px) {
   header .navbar nav {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     margin-top: 1.5rem;
   }
@@ -193,6 +192,11 @@ header .navbar nav a:hover {
   text-decoration: line-through;
 }
 @media (max-width: 500px) {
+  header .navbar nav a {
+    padding: 1rem;
+  }
+}
+@media (max-width: 500px) {
   header .navbar nav {
     padding: 0rem;
   }
@@ -201,6 +205,11 @@ header .navbar nav a:hover {
   header .navbar {
     flex-direction: column;
     padding-left: 0rem;
+  }
+}
+@media (max-width: 500px) {
+  header .navbar {
+    padding-right: 0;
   }
 }
 header {
@@ -216,7 +225,7 @@ header .background {
 @media (max-width: 500px) {
   header .background {
     background-image: none;
-    background-color: #FFFAF0;
+    background-color: #708090;
     height: 20vh;
   }
 }
@@ -271,7 +280,8 @@ header .main .btn a {
 }
 @media (max-width: 500px) {
   header .main {
-    height: 20vh;
+    display: none;
+    height: 0vh;
   }
 }
 .divider {
@@ -288,7 +298,7 @@ header .main .btn a {
 @media (max-width: 500px) {
   .divider {
     height: 60vh;
-    margin-top: 60vh;
+    margin-top: 30vh;
   }
 }
 .centertext {
